CORS error and token decode and Swagger payload done
